# kkreview

./: .gitignore  README.md  pyproject.toml
src/kkreview/: __init__.py  cli.py  config.py  db.py  display.py  evaluator.py  generator.py  llm_client.py  models.py  session.py  stats.py
src/kkreview/prompts/: evaluate.py  generate.py
